# ChitraLeap-Backend

./: .replit  app.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-You-are-an-expert-full-stack-developer-Your-task-is-to-create-the-complete-backend-for-a-web-applic-1756652312106_1756652312107.txt
